# stock-hist-price

./: .gitignore  main.py  pyproject.toml  requirements.txt
assets/: THIRDPARTYLICENSES  app-icon.icns  app-icon.txt
assets/third-party-licenses/darwin/: THIRDPARTYLICENSES
docs/: index.html  styles.css  styles.css.map  styles.scss
docs/components/: _profile.scss  copyright.css
docs/styles/: _layout.scss  colors.css  layout.css  utilities.css
docs/widgets/: _soft-button.scss  soft-button.css
src/services/: __init__.py  update_service.py
src/widgets/: button.py  select.py
